--- a/DB/DBAlumno/src/main/java/gui/VentanaPrincipal.form
+++ b/DB/DBAlumno/src/main/java/gui/VentanaPrincipal.form
@@ -79,6 +79,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Sistema de Registro de Alumno"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
